client/src/app/deck/deck.module.scss
.filterGroup {
	background: var(--gray-500);
	padding: 0.5rem;
	display: flex;
	align-items: center;
	flex-wrap: wrap;
	gap: 0.5rem;
	margin-bottom: 1rem;
}

.validationMessage {
	position: sticky;
	min-height: 35px;
	top: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 0.5rem;
	margin-bottom: 0.5rem;
	border: 2px solid var(--color-error-highlight);
	background: var(--color-error);
	color: var(--text-light);
	filter: drop-shadow(2px 2px 0 rgba(0, 0, 0, 35%)) drop-shadow(0 2px 10px rgba(0, 0, 0, 50%));
	z-index: 11;
}

.cardCount {
	display: flex;
	flex-direction: row;
	flex-shrink: 0;
	gap: 0.25rem;
	font-weight: 600;
	letter-spacing: 1px;
	text-align: center;
	line-height: 100%;
	background: var(--gray-600);
	padding: 0.5rem 0.75rem;
	border-radius: 6px;
	font-family: Minecraft, Unifont;
}

.cardCount span {
	font-size: 0.8rem;
	font-weight: 100;
	letter-spacing: 0;
}

.deckName {
	font-weight: 700;
	font-size: 1.2rem;
	text-overflow: ellipsis;
	flex-shrink: 3;
	overflow: hidden;

	span {
		min-width: 2px;
		text-overflow: ellipsis;
		white-space: nowrap;
	}
}

.myDecksItem {
	display: flex;
	align-items: center;
	gap: 0.5rem;
	padding: 0.5rem;
	user-select: none;

	&:hover {
		cursor: pointer;
		background: #48494a;
		box-shadow: inset 0 -2px #5a5b5c, inset 0 2px #2b2c2c;
	}
}

.selectedDeck {
	font-size: 1rem;
	color: gold;
	text-indent: 3px;
	background: linear-gradient(to right,
			rgba(var(--color-700), 0),
			rgba(var(--color-900), 0.4));
	transition: all 0.25s ease-in-out;
}

.newDeckButton {
	font-family: Minecrafter;
	flex-shrink: 0;
	display: flex;
	align-items: center;
	justify-content: center;
	background: var(--color-primary);
	height: 2.75rem;
	padding: 0 0.5rem;
	padding-bottom: 0.25rem;
	box-shadow: inset 0 -4px 1px var(--color-primary-shadow),
		inset 1px 1px 0 1px var(--color-primary-highlight),
		inset -1px -5px 0 1px var(--color-primary-highlight);
	border: 1.5px solid black;
	cursor: pointer;
	user-select: none;

	&:hover {
		background: #639d52;
	}

	&:active {
		transform: translateY(1px);
	}

	>p {
		font-size: 1rem;
		filter: var(--text-shadow);
		letter-spacing: 0.5px;
	}
}

.caret {
	height: 1rem;
	width: 1rem;
}

.splitButton {
	display: flex;
	margin: 0.5rem;

	.newDeckButton {
		box-shadow: none;
	}

	.newDeckButton:first-child {
		border-right: 0;
		box-shadow: inset 0 -4px 0 0 var(--color-primary-shadow),
			inset 2px 2px 0 0 var(--color-primary-highlight),
			inset 0 -6px 0 0 var(--color-primary-highlight);
		flex-grow: 1;
	}

	.newDeckButton:last-child {
		border-left: 0;
		min-width: 1.5rem;
		box-shadow: inset 0 -4px 0 0 var(--color-primary-shadow),
			inset 0 2px 0 0 var(--color-primary-highlight),
			inset 0 -6px 0 0 var(--color-primary-highlight),
			inset -2px 0 0 0 var(--color-primary-highlight);
	}

	.caret {
		all: unset;
		color: white;
		height: 1rem;
		width: 1rem;
		filter: brightness(5);
	}
}

.deckImage {
	display: grid;
	place-content: center;
	background-color: var(--gray-500);
	border-radius: 6px;
	width: 2rem;
	height: 2rem;
	flex-shrink: 0;

	>img {
		height: 1.5rem;
		filter: drop-shadow(2px 2px 0 rgba(0, 0, 0, 25%));
	}
}

.dropdownButton {
	display: grid;
	place-content: center;
	background-color: var(--gray-500);
	border-radius: 6px;
	width: 2rem;
	height: 2rem;
	flex-shrink: 0;
	cursor: pointer;

	>img {
		height: 1.5rem;
		filter: drop-shadow(2px 2px 0 rgba(0, 0, 0, 25%));
	}

	&:hover {
		background: var(--gray-600);
		filter: brightness(1.1);
	}
}

.button {
	margin: 0 1rem;
}

.sidebarButton {
	padding: 0.5rem;
	display: flex;
	justify-content: stretch;

	>* {
		flex-grow: 1;
	}
}

.cardCountGroup {
	margin-right: 1rem;
	background: var(--gray-500);
	padding: 0.25rem 0.75rem;
	border-radius: 6px;
}

.cardGroupHeader {
	position: relative;
	width: 100%;
}

.tokens {
	color: var(--ultra-rare);
}

.tokenHeader {
	position: absolute;
	right: 10px;
	font-size: 0.9rem;
	transform: translateY(2.5px);
}

.dynamicSpace {
	flex: 1 1 auto;
	width: 0;
}

.error {
	color: var(--color-error);
}

.errorMessage {
	padding-top: 0.25rem;
	display: none;
	font-size: 0.8rem;
}

.input {
	min-width: 100px;
	background: var(--gray-400);
	border: 2px solid var(--gray-900);
	color: white;
	height: 2.4rem;
	padding: 0.5rem;
	padding-bottom: 0.25rem;
	font-size: 0.8rem;

	&::placeholder {
		color: var(--gray-200);
	}

	&:invalid[data-focused="true"]~.errorMessage {
		display: inline;
		width: 100%;
		color: red;
	}
}

.deckDetails {
	display: flex;
	flex-direction: row;
	gap: 0.5rem;
}

.dark {
	background: var(--gray-700);
}

.upperEditDeck {
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding-right: 5px;
}

.editDeckInfo {
	display: flex;
	flex-direction: column;
	gap: 0.5rem;
	padding: 0.5rem;
	margin-bottom: 0.5rem;

	// background: var(--gray-800);
	// border-bottom: 1px solid var(--gray-100);
	// border-radius: 0.5rem;
}

.editDeckInfoSettings {
	display: flex;

	// align-items: center;
	gap: 0.5rem;
}

.inputValidationGroup {
	display: flex;
	flex-direction: column;
	flex-grow: 1;
	justify-content: stretch;
}

.headerGroup {
	display: flex;
	align-items: center;
	flex-flow: row nowrap;
	flex-grow: 1;
	width: 100%;
	gap: 0.5rem;
}

.editableDeckName:not(:focus) {
	&:invalid[data-focused="true"]~.errorMessage {
		display: block;
		width: 100%;
		color: red;
	}
}

.sidebarHeader {
	display: flex;
	flex-direction: row;
	align-items: center;
	gap: 0.5rem;
}

.sidebarFooter {
	flex-shrink: 0;
	display: flex;
	flex-direction: column;
	gap: 0.5rem;
}

.sidebarIcon {
	// position: absolute;
	left: 1rem;
	height: 2rem;
}

.clearFilters {
	border-radius: 0.5rem;
	height: 1.5rem;
	min-width: 1.5rem;
	padding: 0.4rem;
	display: inline-flex;
	align-items: center;
	justify-content: center;
	color: var(--text-light);
	background-color: var(--gray-900);
	border: 1px solid transparent;
	cursor: pointer;

	&:hover {
		background-color: var(--gray-400);
	}

	>img {
		height: 1.5rem;
		width: 1.5rem;
	}
}

.filters {
	display: flex;
	gap: 0.25rem;
	position: relative;
	z-index: 1;
}

/* DESKTOP */
@media (min-width: 720px) {
	.mobileDeckSelect {
		display: none;
	}

	.deckWrapper {
		flex-direction: row;
	}

	.myDecks {
		display: flex;
	}
}

.showOnMobile {
	display: none;
	visibility: hidden;
}

.mobileDeckPreview {
	display: none;
	visibility: hidden;
	overflow: scroll;
	width: 45%;
}

.mobileSelector {
	display: flex;
	flex-direction: column;
	height: 100%;
	gap: 1vh;
}

.mobileDeckStats {
	display: flex;
	flex-direction: row;
	justify-content: right;
	gap: 0.5rem;
	width: 40%;
}

.mobileDeckName {
	background-color: #2b2c2c;
	padding: 0.5rem;
	display: flex;
	align-items: center;
	gap: 0.5rem;
	flex-wrap: wrap;
}

.mobileDeckNameText {
	font-weight: 600;
	flex-grow: 1;
	text-overflow: ellipsis;
	white-space: nowrap;
	overflow: hidden;
	width: 100px;

	&.invalid {
		filter: drop-shadow(1px 0px 0 var(--color-error)) drop-shadow(-1px 0px 0 var(--color-error)) drop-shadow(0px 1px 0 var(--color-error)) drop-shadow(0px -1px 0 var(--color-error));
	}
}

.mobileDeckStat {
	background-color: var(--gray-500);
	border-radius: 6px;
	width: 100%;
	text-align: center;
	padding: 0.5rem 0.75rem;
	font-weight: 600;
	font-size: 14px;
}

.mobileErrorIcon {
	padding-left: 0.5rem;
	filter: drop-shadow(1px 0px 0 var(--color-error)) drop-shadow(-1px 0px 0 var(--color-error)) drop-shadow(0px 1px 0 var(--color-error)) drop-shadow(0px -1px 0 var(--color-error));
}

.deckListContainer {
	flex-grow: 1;
}

.deckTagsForm {
	display: flex;
	flex-direction: row;
	gap: 1rem;
}

.customInput {
	display: flex;
	flex-direction: row;
	gap: 1rem;
	align-items: center;
}

.tagList {
	display: flex;
	flex-direction: row;
	gap: 1rem;
}

.fullTagTitle {
	background-color: var(--gray-600);
	padding: 0.25rem;
	border-radius: 4px;
	border: var(--gray-600) 2px solid;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.fullTag {
	background-color: var(--gray-600);
	padding: 0.5rem;
	border-radius: 4px;
	border: var(--gray-600) 2px solid;

	&:hover {
		border: var(--text-light) 2px solid;
		background-color: #353838;
	}
}

.fullTagColor {
	padding-right: 15px;
	border-radius: 50%;
	margin-right: 5px;
}

.tagBox {
	width: 1rem;
	height: 1rem;
	border-radius: 50%;
}

.multiColoredCircleBorder {
	border-radius: 50%;
	filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 35%));
}

.multiColoredCircle {
	width: 1rem;
	height: 1rem;
	display: flex;
	flex-direction: column;
	clip-path: circle(0.5rem at center);
}

.singleTag {
	flex-grow: 1;
}

.submitButton {
	padding-right: 1rem;
	padding-left: 1rem;
}

.importAndExport {
	display: flex;
	width: 100%;
	gap: 0.5rem;
}

.footerTags {
	display: flex;
	flex-direction: row;
	align-items: center;
	gap: 0.5rem;
}

/* MOBILE */
@media screen and (max-width: 800px) {
	.hideOnMobile {
		display: none;
		visibility: hidden;
	}

	.showOnMobile {
		display: inherit;
		visibility: visible;
	}

	.deckList {
		width: 100%;
		min-width: 100%;
		max-width: 100%;
		background-color: #2b2c2c;
		height: 100%;
		overflow: scroll;
	}

	.mobileDeckPreview {
		display: inherit;
		visibility: visible;
	}

	.deckListBox {
		display: flex;
		flex-direction: row;
		gap: 1vh;
		flex-grow: 1;
		overflow: hidden;
	}

	.filterGroup {
		justify-content: center;
		gap: 0rem;
		margin-bottom: 0px;
	}

	.editDeckInfo {
		padding: 0px;
	}
}

.iconButton {
	border-radius: 0.5rem;
	height: 1.5rem;
	padding: 0.4rem;
	display: inline-flex;
	align-items: center;
	justify-content: center;
	color: var(--text-light);
	background-color: var(--gray-900);
	border: 1px solid transparent;

	&:hover {
		background-color: var(--gray-400);
	}

	>img {
		height: 1.5rem;
		width: 1.5rem;
	}
}

@media screen and (max-width: 365px) {
	.mobileDeckStat {
		padding: 0.2rem 0.2rem;
	}

	.mobileDeckStats {
		width: 100%;
	}
}

